--- a/home/helix/themes/catppuccin_macchiato.toml
+++ b/home/helix/themes/catppuccin_macchiato.toml
@@ -65,7 +65,7 @@
 
 # User Interface
 # --------------
-"ui.background" = { fg = "text", bg = "base" }
+"ui.background" = { }
 
 "ui.linenr" = { fg = "surface1" }
 "ui.linenr.selected" = { fg = "lavender" }
